feat: gaokao analysis Spring AI/Qdrant indexing pipeline + prompt.md update
- common-contract: add GaokaoIndexingConstants, GaokaoPaperIndexRequestedEvent,
  GaokaoIndexCallbackRequest with serialization tests
- gaokao-analysis-service: Spring AI Zhipu chat/embedding, native Qdrant HTTP
  vector service, RabbitMQ consumer for paper index events, AI analysis with
  structured JSON fallback
- gaokao-corpus-service: OCR ingest via /internal/ocr/recognize, draft update
  with section/options/answers/assets, publish flow with async index event,
  internal callback for rag/vector/recommend persistence
- ocr-service: add sync OCR RPC POST /internal/ocr/recognize
- question-core-service: add /internal/questions/from-gaokao endpoint and
  GaokaoQuestionCreateService
- prompt.md: add gaokao subsystem (corpus/analysis/gaokao-web), Qdrant infra,
  Spring AI tech stack, indexing pipeline section, renumber all sections